# Sovereign_Mesh

./: DISCLAIMER.md  README.md
T3MP3ST_standalone/: mission.json  package.json  squad_core.js  tsconfig.json
T3MP3ST_standalone/.github/workflows/: ci.yml
T3MP3ST_standalone/src/: cli.ts  index.ts
T3MP3ST_standalone/src/admiral/: index.ts
T3MP3ST_standalone/src/agent/: index.ts  local-agents.ts
T3MP3ST_standalone/src/core/: dual-spreader.ts  ramanujan-mesh.ts  sovchaf.ts
T3MP3ST_standalone/src/llm/: index.ts
T3MP3ST_standalone/src/operators/: index.ts
chaff/: Cargo.toml  README.md
chaff/src/: main.rs  otp.rs
src/config/: index.ts
